[package]
name = "ssh_ui"
version = "0.1.0"
edition = "2021"
description = "Painlessly expose Rust TUI applications over ssh"
license = "MIT"
repository = "https://github.com/ellenhp/ssh_ui/"
keywords = ["cursive", "tui", "ssh", "terminal"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
thrussh = { version = "0.33.5", features = ["openssl"] }
thrussh-keys = { version = "0.21.0", features = ["openssl"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.68"
lazy_static = "1.4.0"
async-std = "1.12.0"
openpty = "0.2.0"
libc = "0.2.139"

[[example]]
name = "dialog"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]
