[package]
name = "ssh_ui"
version = "0.2.0"
edition = "2021"
description = "Painlessly expose Rust TUI applications over ssh"
license = "MIT"
repository = "https://github.com/ellenhp/ssh_ui/"
keywords = ["cursive", "tui", "ssh", "terminal"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
russh = { version = "0.34.0", features = ["vendored-openssl"] }
russh-keys = { version = "0.22.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.68"
lazy_static = "1.4.0"
async-std = "1.12.0"
openpty = "0.2.0"
libc = "0.2.139"

[[example]]
name = "dialog"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["termion-backend"]
